--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
 		"test": "jest"
 	},
 	"dependencies": {
-		"react": "16.0.0-alpha.12",
-		"react-native": "0.48.4"
+		"react": "^16.0.0-beta.5",
+		"react-native": "^0.49.3"
 	},
 	"devDependencies": {
 		"babel-jest": "21.2.0",
