--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"postinstall": "node node_modules/typings/dist/bin.js install",
 		"start": "node node_modules/react-native/local-cli/cli.js start",
 		"android": "node node_modules/react-native/local-cli/cli.js run-android",
-		"ios": "node node_modules/react-native/local-cli/cli.js run-ios",
+		"ios": "node node_modules/react-native/local-cli/cli.js run-ios --simulator \"iPhone 8\"",
 		"prebuild": "rm -rf build",
 		"build": "tsc",
 		"test": "jest"
