--- a/package.json
+++ b/package.json
@@ -13,19 +13,19 @@
 		"test": "jest"
 	},
 	"dependencies": {
-		"react": "^16.0.0-beta.5",
-		"react-native": "^0.49.3"
+		"react": "^16.0.0",
+		"react-native": "^0.49.5"
 	},
 	"devDependencies": {
+		"@types/react": "^16.0.18",
+		"@types/react-native": "^0.49.5",
 		"babel-jest": "21.2.0",
 		"babel-preset-react-native": "4.0.0",
 		"jest": "21.2.1",
 		"react-test-renderer": "16.0.0-alpha.12",
-		"tslint": "^5.7.0",
+		"tslint": "^5.8.0",
 		"typescript": "^2.5.3",
-		"typings": "^2.1.1",
-		"@types/react": "^16.0.14",
-		"@types/react-native": "^0.49.2"
+		"typings": "^2.1.1"
 	},
 	"jest": {
 		"preset": "react-native"
