--- a/tsconfig.json
+++ b/tsconfig.json
@@ -46,7 +46,7 @@
         "experimentalDecorators": true, /* Enables experimental support for ES7 decorators. */
         "preserveConstEnums": true, /* Enables const for enums. */
         // "emitDecoratorMetadata": true,         /* Enables experimental support for emitting type metadata for decorators. */
-        "watch": true
+        "watch": false
     },
     "filesGlob": [
         "src/**/*.ts",
