--- a/package.json
+++ b/package.json
@@ -3,8 +3,6 @@
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
-		"preinstall": "rm -rf typings",
-		"postinstall": "node node_modules/typings/dist/bin.js install",
 		"start": "node node_modules/react-native/local-cli/cli.js start",
 		"android": "node node_modules/react-native/local-cli/cli.js run-android",
 		"ios": "node node_modules/react-native/local-cli/cli.js run-ios --simulator \"iPhone 8\"",
@@ -28,6 +26,7 @@
 		"typings": "^2.1.1"
 	},
 	"jest": {
-		"preset": "react-native"
+		"preset": "react-native",
+		"collectCoverage": true
 	}
 }
